--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -12,34 +12,34 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/submit"
         android:id="@+id/bttnSubmit"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffffff"
-        android:textSize="19dp" />
+        android:textSize="19sp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="    back    "
+        android:text="@string/back"
         android:id="@+id/bttnBack"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#ffffffff"
-        android:textSize="19dp" />
+        android:textSize="19sp" />
 
     <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:text="Thank you for your responses"
+    android:text="@string/finish"
     android:id="@+id/txtThanks"
     android:layout_above="@+id/txtProgress"
     android:layout_centerHorizontal="true"
-    android:textSize="25dp"
+    android:textSize="25sp"
     android:layout_marginBottom="7dp"
     android:textColor="#ffffffff"
     android:textAlignment="center"
@@ -49,11 +49,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0/2 Questions Completed"
+        android:text="@string/progress"
         android:id="@+id/txtProgress"
         android:layout_above="@+id/bttnSubmit"
         android:layout_centerHorizontal="true"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:layout_marginBottom="10dp"
         android:textColor="#ffffffff"
         android:textAlignment="center"
