--- a/app/src/main/res/layout/activity_question2.xml
+++ b/app/src/main/res/layout/activity_question2.xml
@@ -14,21 +14,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="    How are you \nfeeling right now?"
+        android:text="@string/Q1"
         android:id="@+id/txtHeader"
         android:textColor="#ffffffff"
-        android:textSize="37dp"
+        android:textSize="37sp"
         android:typeface="sans"
         android:textAlignment="center"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="1.2  Stressed or Overwhelmed?"
+        android:text="@string/Q1.2"
         android:id="@+id/txtQ1.2"
         android:textColor="#ffffffff"
         android:typeface="sans"
@@ -51,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rdio1"
-            android:text="1 - not at all"
+            android:text="@string/scale1"
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp"
@@ -61,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rdio2"
-            android:text="2 - Very little"
+            android:text="@string/scale2"
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp" />
@@ -70,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rdio3"
-            android:text="3 - Somewhat"
+            android:text="@string/scale3"
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp" />
@@ -79,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rdio4"
-            android:text="4 - Quite a bit"
+            android:text="@string/scale4"
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp" />
@@ -88,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rdio5"
-            android:text="5 - Extremely"
+            android:text="@string/scale5"
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp" />
@@ -97,7 +98,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="back"
+        android:text="@string/back"
         android:id="@+id/bttnBack"
         android:textColor="#ffffffff"
         android:layout_toRightOf="@+id/bttnNext"
@@ -108,7 +109,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="next"
+        android:text="@string/next"
         android:id="@+id/bttnNext"
         android:textColor="#ffffffff"
         android:layout_alignParentBottom="true"
