--- a/app/src/main/res/layout/activity_question4.xml
+++ b/app/src/main/res/layout/activity_question4.xml
@@ -6,8 +6,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Question"
+    tools:context="com.sanders.natalie.well_being.Question4"
     android:background="#ff364cff">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,6 +19,7 @@
         android:textColor="#ffffffff"
         android:textSize="37sp"
         android:typeface="sans"
+        android:textAlignment="center"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
@@ -27,29 +29,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/Q1.1"
-        android:id="@+id/txtQ1.2"
+        android:text="@string/Q1.4"
+        android:id="@+id/txtQ1.4"
         android:textColor="#ffffffff"
         android:typeface="sans"
-        android:textSize="25.5sp"
         android:layout_below="@+id/txtHeader"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="25.5dp" />
 
     <RadioGroup
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/txtQ1.2"
+        android:layout_below="@+id/txtQ1.4"
         android:id="@+id/rdioGrpScale"
         android:layout_marginTop="10dp"
+        android:layout_above="@+id/bttnBack"
         android:layout_centerHorizontal="true">
 
         <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rdio1"
-        android:text="@string/scale1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rdio1"
+            android:text="@string/scale1"
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp"
@@ -63,7 +66,6 @@
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp" />
-
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -91,8 +93,18 @@
             android:checked="false"
             android:textColor="#ffffffff"
             android:textSize="25.5dp" />
-
     </RadioGroup>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/back"
+        android:id="@+id/bttnBack"
+        android:textColor="#ffffffff"
+        android:layout_toRightOf="@+id/bttnNext"
+        android:layout_alignTop="@+id/bttnNext"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
