Improved scalability & updated database; debugging underway

--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/submit"
-        android:id="@+id/bttnSubmit"
+        android:id="@+id/bttnNext"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffffff"
@@ -51,7 +51,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/progress"
         android:id="@+id/txtProgress"
-        android:layout_above="@+id/bttnSubmit"
+        android:layout_above="@+id/bttnNext"
         android:layout_centerHorizontal="true"
         android:textSize="15sp"
         android:layout_marginBottom="10dp"
