--- a/app/src/main/res/layout/activity_question_1.xml
+++ b/app/src/main/res/layout/activity_question_1.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/Q1"
-        android:id="@+id/txtHeader"
+        android:id="@+id/txtBaseQues"
         android:textColor="#ffffffff"
         android:textSize="37sp"
         android:typeface="sans"
@@ -28,11 +28,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Q1.1"
-        android:id="@+id/txtQ1.2"
+        android:id="@+id/txtSubQues"
         android:textColor="#ffffffff"
         android:typeface="sans"
         android:textSize="25.5sp"
-        android:layout_below="@+id/txtHeader"
+        android:layout_below="@+id/txtBaseQues"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerHorizontal="true" />
@@ -52,14 +52,14 @@
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/txtQ1.2"
+        android:layout_below="@+id/txtSubQues"
         android:layout_above="@+id/bttnNext"
         android:layout_marginTop="5dp"
         android:gravity="center_horizontal"
         android:id="@+id/tableAns">
             <TableRow
                 android:id="@+id/tableRow1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dip"
                 android:background="#ff85ff31"
@@ -72,12 +72,14 @@
                     android:text="@string/scale1"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#ff364cff"
-                    android:layout_margin="5dp" />
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dip"
                 android:background="#ff85ff31"
@@ -86,16 +88,18 @@
                 android:focusable="true">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/txtSurveyTime"
                     android:text="@string/scale2"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#ff364cff"
-                    android:layout_margin="5dp" />
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow3"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dip"
                 android:background="#ff85ff31"
@@ -108,12 +112,14 @@
                     android:text="@string/scale3"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#ff364cff"
-                    android:layout_margin="5dp" />
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow4"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dip"
                 android:background="#ff85ff31"
@@ -126,12 +132,14 @@
                     android:text="@string/scale4"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#ff364cff"
-                    android:layout_margin="5dp" />
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow5"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dip"
                 android:background="#ff85ff31"
@@ -144,7 +152,9 @@
                     android:text="@string/scale5"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#ff364cff"
-                    android:layout_margin="5dp" />
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal" />
             </TableRow>
         </TableLayout>
 
