--- a/app/src/main/res/layout/activity_delay_explanation.xml
+++ b/app/src/main/res/layout/activity_delay_explanation.xml
@@ -31,7 +31,7 @@
         android:layout_below="@+id/txtSettings"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/bttnSubmit"
+        android:layout_above="@+id/bttnNext"
         android:gravity="top"
         android:layout_margin="5dp"
         android:textColor="#ffffffff"
@@ -41,7 +41,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/submit"
-        android:id="@+id/bttnSubmit"
+        android:id="@+id/bttnNext"
         android:enabled="false"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
