--- a/app/src/main/res/layout/activity_question1_slider.xml
+++ b/app/src/main/res/layout/activity_question1_slider.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/Q1"
-        android:id="@+id/textView"
+        android:id="@+id/txtSurveyName"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="25sp"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/submit"
-        android:id="@+id/bttnSubmit"
+        android:id="@+id/bttnNext"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -45,15 +45,15 @@
         android:layout_height="wrap_content"
         android:text="@string/Q1.1"
         android:id="@+id/textView4"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/txtSurveyName"
         android:layout_toStartOf="@+id/seekBar1"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:textSize="20sp"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
+        android:layout_alignRight="@+id/txtSurveyName"
+        android:layout_alignEnd="@+id/txtSurveyName"
+        android:layout_alignLeft="@+id/txtSurveyName"
+        android:layout_alignStart="@+id/txtSurveyName"
         android:textColor="#ffffffff"
         android:layout_marginLeft="10dp" />
 
@@ -105,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Q1.4"
-        android:id="@+id/textView2"
+        android:id="@+id/txtSurveyTime"
         android:layout_below="@+id/seekBar3"
         android:layout_alignLeft="@+id/textView7"
         android:layout_alignStart="@+id/textView7"
@@ -118,7 +118,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seekBar4"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/txtSurveyTime"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
