--- a/app/src/main/res/layout/activity_question2.xml
+++ b/app/src/main/res/layout/activity_question2.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/Q1"
-        android:id="@+id/txtHeader"
+        android:id="@+id/txtBaseQues"
         android:textColor="#ffffffff"
         android:textSize="37sp"
         android:typeface="sans"
@@ -30,70 +30,125 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Q1.2"
-        android:id="@+id/txtQ1.2"
+        android:id="@+id/txtSubQues"
         android:textColor="#ffffffff"
         android:typeface="sans"
-        android:layout_below="@+id/txtHeader"
+        android:layout_below="@+id/txtBaseQues"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerHorizontal="true"
         android:textSize="25.5dp" />
 
-    <RadioGroup
+    <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/txtQ1.2"
-        android:id="@+id/rdioGrpScale"
-        android:layout_marginTop="10dp"
-        android:layout_above="@+id/bttnBack"
-        android:layout_centerHorizontal="true">
-
-        <RadioButton
-            android:layout_width="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/txtSubQues"
+        android:layout_above="@+id/bttnNext"
+        android:layout_marginTop="5dp"
+        android:gravity="center_horizontal"
+        android:id="@+id/tableAns">
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/rdio1"
-            android:text="@string/scale1"
-            android:checked="false"
-            android:textColor="#ffffffff"
-            android:textSize="25.5dp"
-            android:typeface="sans" />
+            android:padding="5dip"
+            android:background="#ff85ff31"
+            android:layout_marginBottom="2dp"
+            android:clickable="true"
+            android:focusable="true">
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/rdio2"
-            android:text="@string/scale2"
-            android:checked="false"
-            android:textColor="#ffffffff"
-            android:textSize="25.5dp" />
+            <TextView
+                android:id="@+id/textView1"
+                android:text="@string/scale1"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff364cff"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal" />
+        </TableRow>
 
-        <RadioButton
-            android:layout_width="wrap_content"
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/rdio3"
-            android:text="@string/scale3"
-            android:checked="false"
-            android:textColor="#ffffffff"
-            android:textSize="25.5dp" />
+            android:padding="5dip"
+            android:background="#ff85ff31"
+            android:layout_marginBottom="2dp"
+            android:clickable="true"
+            android:focusable="true">
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/rdio4"
-            android:text="@string/scale4"
-            android:checked="false"
-            android:textColor="#ffffffff"
-            android:textSize="25.5dp" />
+            <TextView
+                android:id="@+id/txtSurveyTime"
+                android:text="@string/scale2"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff364cff"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal" />
+        </TableRow>
 
-        <RadioButton
-            android:layout_width="wrap_content"
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/rdio5"
-            android:text="@string/scale5"
-            android:checked="false"
-            android:textColor="#ffffffff"
-            android:textSize="25.5dp" />
-    </RadioGroup>
+            android:padding="5dip"
+            android:background="#ff85ff31"
+            android:layout_marginBottom="2dp"
+            android:clickable="true"
+            android:focusable="true">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:text="@string/scale3"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff364cff"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dip"
+            android:background="#ff85ff31"
+            android:layout_marginBottom="2dp"
+            android:focusable="true"
+            android:clickable="true">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:text="@string/scale4"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff364cff"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dip"
+            android:background="#ff85ff31"
+            android:layout_marginBottom="2dp"
+            android:clickable="true"
+            android:focusable="true">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:text="@string/scale5"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff364cff"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal" />
+        </TableRow>
+    </TableLayout>
 
     <Button
         android:layout_width="wrap_content"
