Service pulls updates to surveys and survey additions from Parse and updates alarms and database accordingly. Start screen is filled with all surveys (Note: on installation all surveys are pulled)

--- a/app/src/main/res/layout/activity_question1_slider.xml
+++ b/app/src/main/res/layout/activity_question1_slider.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/seekBar1"
         android:indeterminate="false"
-        android:layout_below="@+id/textView4"
+        android:layout_below="@+id/txtSubQ1"
         android:layout_centerHorizontal="true"
         android:longClickable="false"
         android:layout_marginLeft="20dp"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/Q1"
-        android:id="@+id/txtSurveyName"
+        android:id="@+id/txtBaseQ"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="25sp"
@@ -44,16 +44,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Q1.1"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/txtSurveyName"
+        android:id="@+id/txtSubQ1"
+        android:layout_below="@+id/txtBaseQ"
         android:layout_toStartOf="@+id/seekBar1"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:textSize="20sp"
-        android:layout_alignRight="@+id/txtSurveyName"
-        android:layout_alignEnd="@+id/txtSurveyName"
-        android:layout_alignLeft="@+id/txtSurveyName"
-        android:layout_alignStart="@+id/txtSurveyName"
+        android:layout_alignRight="@+id/txtBaseQ"
+        android:layout_alignEnd="@+id/txtBaseQ"
+        android:layout_alignLeft="@+id/txtBaseQ"
+        android:layout_alignStart="@+id/txtBaseQ"
         android:textColor="#ffffffff"
         android:layout_marginLeft="10dp" />
 
@@ -61,10 +61,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Q1.2"
-        android:id="@+id/textView6"
+        android:id="@+id/txtSubQ2"
         android:layout_below="@+id/seekBar1"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignStart="@+id/textView4"
+        android:layout_alignLeft="@+id/txtSubQ1"
+        android:layout_alignStart="@+id/txtSubQ1"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:textSize="20sp"
@@ -74,7 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seekBar2"
-        android:layout_below="@+id/textView6"
+        android:layout_below="@+id/txtSubQ2"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
@@ -83,10 +83,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Q1.3"
-        android:id="@+id/textView7"
+        android:id="@+id/txtSubQ3"
         android:layout_below="@+id/seekBar2"
-        android:layout_alignLeft="@+id/textView6"
-        android:layout_alignStart="@+id/textView6"
+        android:layout_alignLeft="@+id/txtSubQ2"
+        android:layout_alignStart="@+id/txtSubQ2"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:textSize="20sp"
@@ -96,7 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seekBar3"
-        android:layout_below="@+id/textView7"
+        android:layout_below="@+id/txtSubQ3"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp" />
@@ -105,10 +105,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Q1.4"
-        android:id="@+id/txtSurveyTime"
+        android:id="@+id/txtSubQ4"
         android:layout_below="@+id/seekBar3"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_alignStart="@+id/textView7"
+        android:layout_alignLeft="@+id/txtSubQ3"
+        android:layout_alignStart="@+id/txtSubQ3"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:textSize="20sp"
@@ -118,7 +118,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seekBar4"
-        android:layout_below="@+id/txtSurveyTime"
+        android:layout_below="@+id/txtSubQ4"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
